# computation-for-physicochemistry

./: .gitignore  pyproject.toml
automatas/: README.md  automatas.py
coagulation/: exercise_9.py  gillepsie.py  gillepsie_v2.py  gillespie.py  main.py
gray-scott/: gray-scott.ipynb
random-walk/: random-walk.ipynb
