[tool.poetry]
name = "computation-for-physicochemistry"
version = "0.1.0"
description = ""
authors = ["Daniel Serrano <dserranog@unal.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.3.0"
numpy = "^2.1.3"
ruff = "^0.7.2"
tqdm = "^4.66.6"
pillow = "^11.0.0"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
